[package]
name = "fire_phasers"
version = "0.1.0"
authors = ["Matt Leong <mattleong91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
